welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:21: error: type mismatch;
 found   : Unit
 required: Array[java.awt.Color]
	val D: Array[Color] = rassemblage();
                                         ^